<resources>
    <string name="app_name">AppL1</string>
    <string name="home_page">Welcome</string>
    <string name="a2">A2</string>
    <string name="a1">A1</string>
    <string name="aluno">Nº0 Aluno</string>
    <string name="second_page">second_page</string>
    <string name="Test">JOMS</string>
    <string name="Error2">Description must be more than 5 characters</string>
    <string name="Create_success">Note created with success</string>
    <string name="Delete">Destroyed</string>
    <string name="Update">Updated</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Save">Save</string>
    <string name="DeleteFrontend">Delete</string>
    <string name="ok">ok</string>
    <string name="UpdateFrontEnd">Update</string>
    <string name="DeleteButton">Delete</string>
</resources>